--- a/web_dynamic/static/styles/3-header.css
+++ b/web_dynamic/static/styles/3-header.css
@@ -3,9 +3,23 @@ header {
     height: 70px;
     width: 100%;
     border-bottom: 1px solid #CCCCCC;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
 }
 header .logo {
     background: url("../images/logo.png") no-repeat;
-    left: 20px;
+    width: 100%;
     height: 100%;
+}
+
+header #api_status {
+    background-color: #CCCCCC;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+}
+header #api_status.available {
+    background-color: #ff545f;
 }
